# FlClash

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  README.md  README_zh_CN.md  analysis_options.yaml  build_deb_in_docker.sh  pubspec.yaml  release_telegram.py  setup.dart
.github/: release_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: Build.yml  build-apk.yml  build.yaml  mihomo-core-update.yml  yum.yaml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
arb/: intl_en.arb  intl_fa.arb  intl_ja.arb  intl_ru.arb  intl_zh_CN.arb
core/: action.go  bride_nonandroid.go  bride_ohos.go  common.go  constant.go  convert_subscription.go  convert_subscription_test.go  decode_qr_image.go  dial_socket_cgo.go  go.mod  go.sum  hub.go  lib.go  lib_test.go  main.go  server.go  server_cgo.go  server_cgo_test.go
core/platform/: limit.go  limit_stub.go  procfs_stub.go
core/tun/: options.go  options_default.go  tun.go  (+3 more)
docker/: ubuntu20-deb.Dockerfile
docs/: harmonyos.md  ohos-real-device-test-report.md
lib/: application.dart  controller.dart  main.dart  state.dart
ohos/: .gitignore  .npmrc  build-profile.json5  hvigorfile.ts  hvigorw  oh-package.json5
ohos/entry/src/main/cpp/: CMakeLists.txt  bridge.cpp  child_bridge.cpp  tracked_core_state.cpp  tracked_core_state.h  tracked_core_state_test.cpp
ohos/entry/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
test/: setup_test.dart  test_invariant_jni_helper.cpp
tool/: bump_version.sh  profile_normalize_probe.dart
(+253 files in other folders)
